# acme-sdk-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build_repo.sh  pyproject.toml  setup_github.sh
.github/workflows/: ci.yml
docs/: authentication.md
eval/: .env.example  README.md  arms.py  build_summary_csv.py  evaluators.py  export_runs.py  rate_limit.py  repo_state.json  repo_state.py  requirements.txt  reset_repo.sh  resolve_numbers.py  run_eval.py  summary.csv  tasks.json
eval/exports/: eval-read-20260414-184839.json  eval-read-20260415-132329.json  eval-read-20260415-145247.json  eval-read-20260415-195616.json  eval-write-T12-20260415-084104.json  eval-write-T12-20260415-140407.json  eval-write-T12-20260415-152754.json  eval-write-T12-20260415-201615.json  eval-write-T13-20260415-085507.json  eval-write-T13-20260415-140551.json  eval-write-T13-20260415-152941.json  eval-write-T13-20260415-201754.json  eval-write-T14-20260415-091043.json  eval-write-T14-20260415-140910.json  eval-write-T14-20260415-153328.json  eval-write-T14-20260415-203132.json  eval-write-T15-20260415-092327.json  eval-write-T15-20260415-141423.json  eval-write-T15-20260415-153508.json  eval-write-T15-20260415-203330.json  eval-write-T16-20260415-093751.json  eval-write-T16-20260415-141550.json  eval-write-T16-20260415-154020.json  eval-write-T16-20260415-203918.json  eval-write-T17-20260415-095011.json  eval-write-T17-20260415-141658.json  eval-write-T17-20260415-154121.json  eval-write-T17-20260415-204401.json
src/acme_sdk/: __init__.py  client.py
src/acme_sdk/utils/: batching.py
tests/: conftest.py
